--- a/index.html
+++ b/index.html
@@ -8,10 +8,57 @@
     <link rel="manifest" href="manifest.json">
     <style>
         :root {
-            --primary: #FF9800;
-            --background: #333333;
-            --card-bg: #424242;
-            --text: #ffffff;
+            body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    background: var(--background);
+    color: var(--text);
+    min-height: 100vh;
+    font-size: 18px; /* Aumentato da 16px */
+}
+
+.header h1 {
+    font-size: 24px; /* Dimensione aumentata */
+}
+
+.card h2 {
+    color: var(--primary);
+    margin-bottom: 0.5rem;
+    font-size: 22px; /* Dimensione aumentata */
+}
+
+.card p {
+    margin: 0.5rem 0;
+    line-height: 1.6;
+    font-size: 18px; /* Dimensione aumentata */
+}
+
+.details {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.5rem;
+    font-size: 16px; /* Dimensione aumentata */
+    color: var(--text);
+    opacity: 0.8;
+}
+
+.card {
+    background: var(--card-bg);
+    border-radius: 12px;
+    padding: 1.5rem; /* Padding aumentato */
+    margin-bottom: 1.2rem; /* Margine aumentato */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    animation: slideUp 0.3s ease-out;
+}
+
+.language-switch {
+    background: rgba(255,255,255,0.2);
+    border: none;
+    padding: 0.8rem; /* Padding aumentato */
+    border-radius: 4px;
+    color: white;
+    font-weight: bold;
+    font-size: 16px; /* Dimensione aumentata */
+}
         }
 
         @media (prefers-color-scheme: light) {
