--- a/index.html
+++ b/index.html
@@ -6,59 +6,12 @@
     <title>G7X Photo Settings</title>
     <meta name="theme-color" content="#FF9800">
     <link rel="manifest" href="manifest.json">
-    <style>
+   <style>
         :root {
-            body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    background: var(--background);
-    color: var(--text);
-    min-height: 100vh;
-    font-size: 18px; /* Aumentato da 16px */
-}
-
-.header h1 {
-    font-size: 24px; /* Dimensione aumentata */
-}
-
-.card h2 {
-    color: var(--primary);
-    margin-bottom: 0.5rem;
-    font-size: 22px; /* Dimensione aumentata */
-}
-
-.card p {
-    margin: 0.5rem 0;
-    line-height: 1.6;
-    font-size: 18px; /* Dimensione aumentata */
-}
-
-.details {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.5rem;
-    font-size: 16px; /* Dimensione aumentata */
-    color: var(--text);
-    opacity: 0.8;
-}
-
-.card {
-    background: var(--card-bg);
-    border-radius: 12px;
-    padding: 1.5rem; /* Padding aumentato */
-    margin-bottom: 1.2rem; /* Margine aumentato */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    animation: slideUp 0.3s ease-out;
-}
-
-.language-switch {
-    background: rgba(255,255,255,0.2);
-    border: none;
-    padding: 0.8rem; /* Padding aumentato */
-    border-radius: 4px;
-    color: white;
-    font-weight: bold;
-    font-size: 16px; /* Dimensione aumentata */
-}
+            --primary: #FF9800;
+            --background: #333333;
+            --card-bg: #424242;
+            --text: #ffffff;
         }
 
         @media (prefers-color-scheme: light) {
@@ -81,12 +34,13 @@
             background: var(--background);
             color: var(--text);
             min-height: 100vh;
+            font-size: 18px;
         }
 
         .header {
             background: var(--primary);
             color: white;
-            padding: 1rem;
+            padding: 1.2rem;
             position: sticky;
             top: 0;
             z-index: 100;
@@ -94,6 +48,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+        }
+
+        .header h1 {
+            font-size: 24px;
         }
 
         .nav {
@@ -104,7 +62,7 @@
             background: var(--card-bg);
             display: flex;
             justify-content: space-around;
-            padding: 0.5rem;
+            padding: 0.8rem;
             box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
         }
 
@@ -112,10 +70,10 @@
             border: none;
             background: none;
             color: var(--text);
-            padding: 0.5rem;
+            padding: 0.8rem;
             border-radius: 50%;
-            width: 3rem;
-            height: 3rem;
+            width: 4rem;
+            height: 4rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -128,15 +86,15 @@
         }
 
         .container {
-            padding: 1rem;
-            padding-bottom: 4rem;
+            padding: 1.2rem;
+            padding-bottom: 5rem;
         }
 
         .card {
             background: var(--card-bg);
             border-radius: 12px;
-            padding: 1rem;
-            margin-bottom: 1rem;
+            padding: 1.5rem;
+            margin-bottom: 1.2rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             animation: slideUp 0.3s ease-out;
         }
@@ -154,19 +112,21 @@
 
         .card h2 {
             color: var(--primary);
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.8rem;
+            font-size: 22px;
         }
 
         .card p {
-            margin: 0.5rem 0;
-            line-height: 1.4;
+            margin: 0.8rem 0;
+            line-height: 1.6;
+            font-size: 18px;
         }
 
         .details {
             display: flex;
             justify-content: space-between;
-            margin-top: 0.5rem;
-            font-size: 0.9rem;
+            margin-top: 0.8rem;
+            font-size: 16px;
             color: var(--text);
             opacity: 0.8;
         }
@@ -174,12 +134,13 @@
         .language-switch {
             background: rgba(255,255,255,0.2);
             border: none;
-            padding: 0.5rem;
+            padding: 0.8rem 1.2rem;
             border-radius: 4px;
             color: white;
             font-weight: bold;
+            font-size: 16px;
         }
-    </style>
+</style>
 </head>
 <body>
     <header class="header">
