--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.2, maximum-scale=2.0">
     <title>G7X Photo Settings</title>
     <meta name="theme-color" content="#FF9800">
     <link rel="manifest" href="manifest.json">
